--- a/Backend/MovieService/pom.xml
+++ b/Backend/MovieService/pom.xml
@@ -70,10 +70,10 @@
 			<version>0.11.5</version>
 		</dependency>
 
-<!--		<dependency>
+		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
-		</dependency>  -->
+		</dependency>  
 		
 		<dependency>
 			<groupId>org.springdoc</groupId>
