--- a/Backend/MovieService/src/main/resources/application.properties
+++ b/Backend/MovieService/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
-#spring.kafka.consumer.bootstrap-servers= localhost:9092
-#spring.kafka.conusmer.group-id= myGroup
-#spring.kafka.consumer.auto-offset-reset= earliest
-#spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer 
+spring.kafka.consumer.bootstrap-servers= localhost:9092
+spring.kafka.conusmer.group-id= myGroup
+spring.kafka.consumer.auto-offset-reset= earliest
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer 
