--- a/Backend/UserService/pom.xml
+++ b/Backend/UserService/pom.xml
@@ -76,10 +76,10 @@
 			<scope>test</scope>
 		</dependency>
 
-<!--		<dependency>
+		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
-		</dependency>  -->
+		</dependency>  
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
