--- a/Backend/UserService/src/main/resources/application.properties
+++ b/Backend/UserService/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.datasource.password=Mysqlhrithik@086
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.kafka.producer.bootstrap-servers: localhost:9092
-#spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 #
-#management.endpoints.web.exposure.include=*
-#management.endpoints.web.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.endpoints.web.health.show-details=always
